[package]
name = "xandeum-exporter"
version = "0.0.2"
author = "Brian Bates <brian_bates@me.com>"
edition = "2018"
description = "A Prometheus-based metrics exporter for Xandeum L1 Blockchain."
repository = "https://github.com/brianbatesactual/xandeum-exporter"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "^2.33.3", features = ["yaml"] }
env_logger = "^0.8.3"
log = "^0.4"
prometheus_exporter = "^0.8"
solana-client = "^1.7.3"
solana-runtime = "^1.7.3"
solana-sdk = "^1.7.3"
solana-stake-program = "^1.7.3"
sled = { version = "^0.34.6", features = ["compression"] }
bincode = "^1.3.3"
serde = { version = "^1.0.126", features = ["derive"] }
reqwest = "^0.11.3"
time = { version = "^0.2.26", features = ["serde"] }
geoip2-city = { version = "^0.1.0", features = ["serde_support"] }
anyhow = "^1.0.40"
tokio = "^1.6.0"
futures = "^0.3.15"
dirs = "^3.0.2"
semver = "^1.0.0"
toml = "^0.5.8"
solana-transaction-status = "^1.7.3"
